--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
 <head>
-    <meta charset="utf-8"/>
-    <title>Використання елемента HTML canvas для створення графіки</title>
-    <script src="scripts/canvasFigures.js" defer></script>
+    <meta charset="UTF-8">
+    <meta name="description" content="Урок Додавання метаданих .Практичне питання, що вимагає написання коду:
+Створіть HTML-документ, який містить основні метадані, які були описані в уроці. Ваш документ повинен включати елементи
+`<title>`, `<meta>` з атрибутами `name`, `content` та `charset`, а також елемент `<link>`.
+Ваша веб-сторінка повинна мати назву, опис, ключові слова, ім'я автора,
+кодування символів та зовнішню таблицю стилів.">
+    <meta name="keywords" content="meta, html,ProIT">
+    <meta name="author" content="Denis">
+    <title>Додавання метаданих до вашого HTML-документа, таких як заголовок та опис</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Посилання на зовнішню таблицю стилів -->
+    <link rel="icon" href="https://picsum.photos/200/300"> <!-- Посилання на зовнішню таблицю стилів -->
 </head>
-<!-- Напишіть код JavaScript, який створює елемент canvas, отримує його контекст,
-та малює на ньому червоний прямокутник і синє коло.-->
 <body>
 <header>
-    <h1>Використання елемента HTML canvas для створення графіки</h1>
+    <!--    Практичне питання, що вимагає написання коду:-->
+    <!--    Створіть HTML-документ, який містить основні метадані, які були описані в уроці.
+     Ваш документ повинен включати елементи -->
+    <!--    `<title>`, -->
+    <!--    `<meta>` з атрибутами `name`, `content` та `charset`, а також елемент `<link>`.
+    Ваша веб-сторінка повинна мати назву, -->
+    <!--    опис, ключові слова, ім'я автора, кодування символів та зовнішню таблицю стилів.-->
 </header>
-
-<main>
-   <canvas id ="myCanvas" width="500" height="500">
-   </canvas>
-</main>
-<footer>&copy; Всі права захіщені</footer>
 </body>
 </html>
