220-iframe  add  scrolling termin

--- a/220-iframe.html
+++ b/220-iframe.html
@@ -32,7 +32,7 @@
 
     <h2 id="question4">4. Які основні атрибути використовуються для налаштування iframes?</h2>
     <p>Деякі основні атрибути iframe включають "src" (URL вмісту), "width" та "height" (розміри), "frameborder"
-        (відображення/приховання обрамлення), "sandbox" (обмеження доступу до функцій).</p>
+        (відображення/приховання обрамлення), "sandbox" (обмеження доступу до функцій), scrolling  поведінка скрола</p>
 
     <h2>Практичне питання, що вимагає написання коду:</h2>
     <p> Зверніть увагу на приклад з Google Maps, наведений в уроці. Напишіть код для вбудовування карти з вашого
