--- a/formsAndButtons.html
+++ b/formsAndButtons.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>
-        Напишіть код HTML, який створює форму з текстовим 
-        полем для вводу імені, перемикачем 
+        Напишіть код HTML, який створює форму з текстовим
+        полем для вводу імені, перемикачем
         для вибору статі та прапорцем для вибору хобі..
     </title>
   </head>
@@ -18,7 +18,7 @@
       <input type="email" id="email" name ="email"/>
       <br/>
       <p>Оберіть вашу стать</p>
-     
+
       <label for="male">male</label>
       <input type="radio" id="male" name ="gender"/>
 
@@ -43,24 +43,24 @@
         </select >
       </label>
       <br/>
-      <input type="submit" id="submit" name ="submit"  value="Submit"/>
+      <input type="submit" id="submit" name ="submit"  value="Submit" onclick="alert('форма вітправленна')"/>
       <input type="reset" id="reset" name ="reset"/>
       <br/>
     </form>
 
 
 
-    <p>Напишіть код HTML для текстового поля введення, 
-      яке має мітку "Адреса", id "address", 
-      name "address", та заповнювач "вул. 
+    <p>Напишіть код HTML для текстового поля введення,
+      яке має мітку "Адреса", id "address",
+      name "address", та заповнювач "вул.
       Головна, 1".</p>
 
       <form action="audioVideo.html" method="post">
         <label for="address">Адреса</label>
          <input type="text" id="address" name= "address" placeholder="вул. Головна, 1"/>
-     
 
-      <p>Напишіть код HTML для створення кнопки, яка має автоматично отримувати фокус після завантаження 
+
+      <p>Напишіть код HTML для створення кнопки, яка має автоматично отримувати фокус після завантаження
         сторінки і має текст "Натисни сюди".</p>
       <button autofocus> Натисни сюди </button>
     </form>
