--- a/220-iframe.html
+++ b/220-iframe.html
@@ -8,16 +8,22 @@
 </head>
 <body>
 
-<main>
+<header>
     <h1>Відповіді на питання про iframes</h1>
 
-    <ul>
-        <li><a href="#question1">1. Що таке iframes в контексті HTML?</a></li>
-        <li><a href="#question2">2. Для чого використовується атрибут "loading" в тегу iframe?</a></li>
-        <li><a href="#question3">3. Чим може бути обмежена можливість вбудовування контенту з інших веб-сайтів через
-            iframes?</a></li>
-        <li><a href="#question4">4. Які основні атрибути використовуються для налаштування iframes?</a></li>
-    </ul>
+    <nav>
+        <ul>
+            <li><a href="#question1">1. Що таке iframes в контексті HTML?</a></li>
+            <li><a href="#question2">2. Для чого використовується атрибут "loading" в тегу iframe?</a></li>
+            <li><a href="#question3">3. Чим може бути обмежена можливість вбудовування контенту з інших веб-сайтів через
+                iframes?</a></li>
+            <li><a href="#question4">4. Які основні атрибути використовуються для налаштування iframes?</a></li>
+        </ul>
+    </nav>
+
+
+</header>
+<main>
 
     <h2 id="question1">1. Що таке iframes в контексті HTML?</h2>
     <p>iframes (inline frames) - це HTML-елемент, який дозволяє вбудовувати інший документ в поточний документ.</p>
@@ -32,7 +38,7 @@
 
     <h2 id="question4">4. Які основні атрибути використовуються для налаштування iframes?</h2>
     <p>Деякі основні атрибути iframe включають "src" (URL вмісту), "width" та "height" (розміри), "frameborder"
-        (відображення/приховання обрамлення), "sandbox" (обмеження доступу до функцій), scrolling  поведінка скрола</p>
+        (відображення/приховання обрамлення), "sandbox" (обмеження доступу до функцій), scrolling поведінка скрола</p>
 
     <h2>Практичне питання, що вимагає написання коду:</h2>
     <p> Зверніть увагу на приклад з Google Maps, наведений в уроці. Напишіть код для вбудовування карти з вашого
