--- a/modelHTML/main.html
+++ b/modelHTML/main.html
@@ -40,7 +40,7 @@
         </ul>
     </ol>
 
-    <pre>  <a href="abaut.html/"> Про нас</a> <a href="abaut.html/"> Контакти </a>   </pre>
+    <pre>  <a href="abaut.html"> Про нас</a> <a href="abaut.html"> Контакти </a>   </pre>
     </div>
 </body>
 </html>
