--- a/modelHTML/css-js.html
+++ b/modelHTML/css-js.html
@@ -4,46 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Додавання CSS та JavaScript до вашого HTML-документа</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-
-        h2 {
-            color: #333;
-        }
-
-        a {
-            text-decoration: none;
-            color: #007bff;
-            font-weight: bold;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        .answer {
-            margin-top: 10px;
-            margin-bottom: 20px;
-            color: #555;
-        }
-    </style>
+    <link href="../css/style.css" rel="stylesheet"/>
 </head>
 <body>
 
 <header>
-    <h1>Часто задавані питання</h1>
+    <h1>Додавання CSS та JavaScript до вашого HTML-документа</h1>
 
     <nav>
-        <ul>
-            <li><a href="#q1">1. Роль HTML, CSS та JavaScript</a></li>
-            <li><a href="#q2">2. Атрибут `style` у HTML</a></li>
-            <li><a href="#q3">3. Підключення CSS до HTML</a></li>
-            <li><a href="#q4">4. Функція `addEventListener` у JavaScript</a></li>
+        <ol>
+            <li><a href="#q1">Роль HTML, CSS та JavaScript</a></li>
+            <li><a href="#q2">Атрибут `style` у HTML</a></li>
+            <li><a href="#q3"> Підключення CSS до HTML</a></li>
+            <li><a href="#q4"> Функція `addEventListener` у JavaScript</a></li>
             <li><a href="#q5"> Практичне питання: Кнопка та Сповіщення</a></li>
-        </ul>
+        </ol>
     </nav>
 </header>
 <main>
