--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>"Навігація по курсу"</title>
-    <link href="../css/style.css" rel="stylesheet"/>
+    <link href="css/style.css" rel="stylesheet"/>
 </head>
 <body>
 <header>
-    <h1>Часто задавані питання</h1>
+    <h1>Навігація по курсу</h1>
 
     <nav>
         <ol >
             <li><a href="moduleInternet/index.html">Інтернет</a></li>
             <li><a href="modelHTML/index.html">HTML </a></li>
-            <li><a href="#q3">CSS </a></li>
+            <li><a href="modelCSS/index.html">CSS </a></li>
         </ol>
     </nav>
 </header>
