--- a/modelCSS/index.html
+++ b/modelCSS/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>MenuInternet</title>
+    <title>MenuCSS</title>
     <link href="../css/style.css">
 </head>
 <body>
-<h1>MenuInternet</h1>
+<h1>MenuCSS</h1>
 
 <nav>
     <ol>
