--- a/modelHTML/index.html
+++ b/modelHTML/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>MenuHTML</title>
+    <link href="../css/style.css">
+
 </head>
 <body>
 <header>
@@ -11,12 +13,10 @@
     <nav>
         <ol>
             <li><a href="#q1">Роль HTML, CSS та JavaScript</a></li>
-            <li><a href="#q2">Атрибут `style` у HTML</a></li>
-            <li><a href="#q3"> Підключення CSS до HTML</a></li>
-            <li><a href="#q4"> Функція `addEventListener` у JavaScript</a></li>
-            <li><a href="#q5"> Практичне питання: Кнопка та Сповіщення</a></li>
         </ol>
     </nav>
 </header>
+<a href="../index.html"> Навігація по курсу</a>
+
 </body>
 </html>
