--- a/moduleInternet/fundamentalsOfNetworkingAndTheInternet.html
+++ b/moduleInternet/fundamentalsOfNetworkingAndTheInternet.html
@@ -8,44 +8,60 @@
 
 </head>
 <body>
+<header>
+    <h1>Основи Інтернету</h1>
+    <nav>
+        <ol>
+            <li><a href="#question1"> Що таке роутер і яку функцію він виконує в мережі?</a></li>
+            <li><a href="#question2"> Які основні протоколи використовуються в Інтернеті і які їхні функції?</a></li>
+            <li><a href="#question3"> Що таке пакети в контексті передачі даних у мережі?</a></li>
+            <li><a href="#question4"> Що таке HTTP протокол і як він використовується?</a></li>
+        </ol>
+    </nav>
+</header>
+<main>
+    <hr>
+    <div id="question1">
+        <h2>1. Що таке роутер і яку функцію він виконує в мережі?</h2>
+        <p>Роутер - це пристрій, який використовується для направлення мережевого трафіку між різними мережами. Основна
+            функція роутера - це приймати дані з одного мережевого інтерфейсу та відправляти їх через інший відповідно
+            до
+            адреси призначення. Це допомагає організувати ефективний обмін даними у мережі.</p>
+    </div>
+    <hr>
 
-<h1>Основи Інтернету</h1>
+    <div id="question2">
+        <h2>2. Які основні протоколи використовуються в Інтернеті і які їхні функції?</h2>
+        <p>У Інтернеті використовуються різні протоколи, такі як TCP (Transmission Control Protocol) для надійної
+            передачі
+            даних, UDP (User Datagram Protocol) для швидкої передачі даних, і IP (Internet Protocol) для маршрутизації
+            даних
+            у мережі.</p>
+    </div>
+    <hr>
 
-<ol>
-    <li><a href="#question1"> Що таке роутер і яку функцію він виконує в мережі?</a></li>
-    <li><a href="#question2"> Які основні протоколи використовуються в Інтернеті і які їхні функції?</a></li>
-    <li><a href="#question3"> Що таке пакети в контексті передачі даних у мережі?</a></li>
-    <li><a href="#question4"> Що таке HTTP протокол і як він використовується?</a></li>
-</ol>
+    <div id="question3">
+        <h2>3. Що таке пакети в контексті передачі даних у мережі?</h2>
+        <p>Пакети - це невеликі частини даних, які розбиваються на управлінні блоки для передачі через мережу. Кожен
+            пакет
+            має заголовок з інформацією про адресу призначення, що дозволяє їм знаходити шлях до місця призначення. Цей
+            процес дозволяє ефективно передавати дані через мережу.</p>
+    </div>
+    <hr>
 
-<div id="question1">
-    <h2>1. Що таке роутер і яку функцію він виконує в мережі?</h2>
-    <p>Роутер - це пристрій, який використовується для направлення мережевого трафіку між різними мережами. Основна
-        функція роутера - це приймати дані з одного мережевого інтерфейсу та відправляти їх через інший відповідно до
-        адреси призначення. Це допомагає організувати ефективний обмін даними у мережі.</p>
-</div>
+    <div id="question4">
+        <h2>4. Що таке HTTP протокол і як він використовується?</h2>
+        <p>HTTP (Hypertext Transfer Protocol) - це протокол передачі даних, який використовується для передачі
+            гіпертекстових документів у Всесвітній мережі. Він використовується для взаємодії між веб-браузерами та
+            веб-серверами, дозволяючи отримувати та відправляти дані на веб-сторінки.</p>
+    </div>
+    <hr>
 
-<div id="question2">
-    <h2>2. Які основні протоколи використовуються в Інтернеті і які їхні функції?</h2>
-    <p>У Інтернеті використовуються різні протоколи, такі як TCP (Transmission Control Protocol) для надійної передачі
-        даних, UDP (User Datagram Protocol) для швидкої передачі даних, і IP (Internet Protocol) для маршрутизації даних
-        у мережі.</p>
-</div>
-
-<div id="question3">
-    <h2>3. Що таке пакети в контексті передачі даних у мережі?</h2>
-    <p>Пакети - це невеликі частини даних, які розбиваються на управлінні блоки для передачі через мережу. Кожен пакет
-        має заголовок з інформацією про адресу призначення, що дозволяє їм знаходити шлях до місця призначення. Цей
-        процес дозволяє ефективно передавати дані через мережу.</p>
-</div>
-
-<div id="question4">
-    <h2>4. Що таке HTTP протокол і як він використовується?</h2>
-    <p>HTTP (Hypertext Transfer Protocol) - це протокол передачі даних, який використовується для передачі
-        гіпертекстових документів у Всесвітній мережі. Він використовується для взаємодії між веб-браузерами та
-        веб-серверами, дозволяючи отримувати та відправляти дані на веб-сторінки.</p>
-</div>
-<a href="index.html"> Повернутися до MenuInternet</a>
+    <footer>
+        <a href="files/102_IP-адреси.pdf"> конспект уроку</a>
+        <a href="index.html"> Повернутися до MenuInternet</a>
+    </footer>
+</main>
 
 </body>
 </html>
